--- a/pgq-quest-app/pom.xml
+++ b/pgq-quest-app/pom.xml
@@ -88,6 +88,11 @@
             <groupId>tech.neychoup</groupId>
             <artifactId>pgq-quest-infrastructure</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+            <version>4.9.3</version>
+        </dependency>
     </dependencies>
 
     <build>
