--- a/taskcraft-ai-task-infrastructure/pom.xml
+++ b/taskcraft-ai-task-infrastructure/pom.xml
@@ -35,6 +35,20 @@
             <groupId>tech.neychoup</groupId>
             <artifactId>taskcraft-ai-task-domain</artifactId>
         </dependency>
+
+        <!-- LangChain4j -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-open-ai</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
