--- a/taskcraft-ai-task-infrastructure/pom.xml
+++ b/taskcraft-ai-task-infrastructure/pom.xml
@@ -49,6 +49,14 @@
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-open-ai</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.23.4</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
